hero section styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <!-- hero section -->
         <section class=hero>
-            <div class="hero-title">
+            <div id="delay" class="hero-title">
                 <h2>Coding and Web Development Portfolio</h2>
             </div>
         </section>
