bio styling and images

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div>
             <h2 class="section-title">Who Am I?</h2>
             </div>
-            <div class="my-photo">
-                <img src="/" alt="Me in Sweden 2020">
+            <div class="my-bio">
+                <img src="./assets/images/Andrea-Spencer.png" alt="Me at a wedding 2020">
                 <p>
                 I'm so you glad you asked. I am a 23 year old CSUN Graduate with a Bachelors in Business Management. I am currently enrolled in UCLA Coding Bootcamp for my certificate in Full Stack Web Development.
                 </p>
@@ -99,9 +99,9 @@
                     </address>
                     <div class="social-media">
                         <div>
-                            <img src="/" alt="Git Hub logo">
+                            <img src="./assets/images/github-logo.png" alt="Git Hub logo">
                             <a href="andreaspencer.github.io">Git Hub</a>
-                            <img src="/" alt="LinkedIn logo">
+                            <img src="./assets/images/linkedin-logo.png" alt="LinkedIn logo">
                             <a href="https://www.linkedin.com/in/andrea-spencer-3b3304113/">LinkedIn</a>
                         </div>
                     </div>
