contact info style

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             </div>
             <div class="my-bio">
                 <p>
-                I'm so you glad you asked. I am a 23 year old CSUN Graduate with a Bachelors in Business Management. I am currently enrolled in UCLA Coding Bootcamp for my certificate in Full Stack Web Development.
+                I'm so you glad you asked. I am a 23 year old CSUN Graduate with a Bachelors in Business Management. I am currently enrolled in UCLA Coding Bootcamp for my certificate in Full Stack Web Development. 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia numquam inventore quasi earum animi harum veniam corrupti hic, excepturi atque eveniet reiciendis libero veritatis aliquid quibusdam blanditiis illo necessitatibus. Nesciunt.
                 </p>
             </div>
         </section>
