contact info styling additions

--- a/index.html
+++ b/index.html
@@ -87,22 +87,19 @@
             </div>
             <div class="contact-info">
                 <div>
-                    <h3>Andrea Spencer</h3>
                     <p>
                         Any questions?
                         <br>
-                        I will be happy to talk.
+                        I am happy to talk.
                     </p>
-                    <address>
-                        P: <a href="tel:818.534.6005">818.534.6005</a>
-                        E: <a href="mailto:andreaaddawn@gmail.com">andreaaddawn@gmail.com</a>
-                    </address>
-                    <div class="social-media">
+                    <section class="contact-social">
                         <div>
-                            <a href="andreaspencer.github.io">Git Hub</a>
-                            <a href="https://www.linkedin.com/in/andrea-spencer-3b3304113/">LinkedIn</a>
+                            P: <a href="tel:818.534.6005">818.534.6005</a>
+                            E: <a href="mailto:andreaaddawn@gmail.com">andreaaddawn@gmail.com</a>
+                           <a href="andreaspencer.github.io">GitHub</a>
+                           <a href="https://www.linkedin.com/in/andrea-spencer-3b3304113/">LinkedIn</a>
                         </div>
-                    </div>
+                    </section>
                 </div>
             </div>
         </section>
