my work styling

--- a/index.html
+++ b/index.html
@@ -49,32 +49,36 @@
                 <h2 class="section-title">My Work</h2>
             </div>
             <div class="projects">
-            <article class="project">
-                <img src="/" alt="Horiseon Landing Page">
+            <article class="project-h">
+                <a href="https://andreaspencer.github.io/">
+                <img src="./assets/images/Horiseon-Landing-Page.png" alt="Horiseon Landing Page">
+                </a>
                 <div class="project-title">
-                    <a href="https://andreaspencer.github.io/">Horiseon</a>
+                    <h3>Horiseon<h3>
                 </div>
             </article>
             <article class="project">
-                <img src="/" alt="Run Buddy Landing Page">
+                <a href="https://andreaspencer.github.io/run--buddy/">
+                <img src="./assets/images/Run-Buddy-Landing-page.png" alt="Run Buddy Landing Page">
+                </a>
                 <div class="project-title">
-                    <a href="https://andreaspencer.github.io/run--buddy/">Run Buddy</a>
+                    <h3>Run Buddy</h3>
                 </div>
             </article>
             <article class="project">
-                <img src="/" alt="Placeholder image">
-                <div class="project-title">
-                    <h3>Coming Soon</h3>
-                </div>
-            </article>
-            <article class="project">
-                <img src="/" alt="Placeholder Image">
+                <img src="./assets/images/Waiting.jpeg" alt="Placeholder image">
                 <div class="project-title">
                     <h3>Coming Soon</h3>
                 </div>
             </article>
             <article class="project">
-                <img src="/" alt="Placeholder Image">
+                <img src="./assets/images/Waiting.jpeg" alt="Placeholder Image">
+                <div class="project-title">
+                    <h3>Coming Soon</h3>
+                </div>
+            </article>
+            <article class="project">
+                <img src="./assets/images/Waiting.jpeg" alt="Placeholder Image">
                 <div class="project-title">
                     <h3>Coming Soon</h3>
                 </div>
@@ -104,7 +108,7 @@
             </div>
         </section>
         <footer>
-            <h2>Made with 💕 by Andrea Spencer</h2>
+            <h2>Made with 🖤 by Andrea Spencer</h2>
         </footer>
     </body>
 </html>
