media query for tablets

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 I'm so you glad you asked. I am a 23 year old CSUN Graduate with a Bachelors in Business Management. I am currently enrolled in UCLA Coding Bootcamp for my certificate in Full Stack Web Development. 
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia numquam inventore quasi earum animi harum veniam corrupti hic, excepturi atque eveniet reiciendis libero veritatis aliquid quibusdam blanditiis illo necessitatibus. Nesciunt.
                 </p>
+                <img src="./assets/images/Andrea-Spencer.png" alt="Andrea at a wedding Pre-Pandemic" />
             </div>
         </section>
         <!-- my work section-->
