media queries for phones

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
             <div class="my-bio">
                 <p>
-                I'm so you glad you asked. I am a 23 year old CSUN Graduate with a Bachelors in Business Management. I am currently enrolled in UCLA Coding Bootcamp for my certificate in Full Stack Web Development. 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia numquam inventore quasi earum animi harum veniam corrupti hic, excepturi atque eveniet reiciendis libero veritatis aliquid quibusdam blanditiis illo necessitatibus. Nesciunt.
+                I'm so you glad you asked. I am a 23 year old CSUN Graduate with a <br class="hidden-ss"> Bachelors in Business Management. I am currently enrolled in UCLA <br class="hidden-ss"> Coding Bootcamp for my certificate in Full Stack Web Development. <br class="hidden-ss">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia numquam <br class="hidden-ss"> inventore quasi earum animi harum veniam corrupti hic, excepturi atque <br class="hidden-ss"> eveniet reiciendis libero veritatis aliquid quibusdam blanditiis illo <br class="hidden-ss"> necessitatibus. Nesciunt.
                 </p>
                 <img src="./assets/images/Andrea-Spencer.png" alt="Andrea at a wedding Pre-Pandemic" />
             </div>
