--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
             <div class="my-bio">
                 <p>
-                I'm so you glad you asked. I am a 23 year old CSUN Graduate with a <br class="hidden-ss"> Bachelors in Business Management. I am currently enrolled in UCLA <br class="hidden-ss"> Coding Bootcamp for my certificate in Full Stack Web Development. <br class="hidden-ss">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia numquam <br class="hidden-ss"> inventore quasi earum animi harum veniam corrupti hic, excepturi atque <br class="hidden-ss"> eveniet reiciendis libero veritatis aliquid quibusdam blanditiis illo <br class="hidden-ss"> necessitatibus. Nesciunt.
+                Hi my name is Andrea. I am a 23 year old CSUN Graduate with a <br class="hidden-ss"> Bachelors in Business Management. I am currently enrolled in UCLA <br class="hidden-ss"> Coding Bootcamp for my certificate in Full Stack Web Development. <br class="hidden-ss">
+                I live in Los Angeles but call many places my home. I try to <br class="hidden-ss"> travel as much as I can. I enjoy meeting new people and experiencing <br class="hidden-ss"> different cultures. Trying new things and finding my way in life has been <br class="hidden-ss"> a challenge but I've learned alot from other people and always <br class="hidden-ss"> try to better myself.
                 </p>
                 <img src="./assets/images/Andrea-Spencer.png" alt="Andrea at a wedding Pre-Pandemic" />
             </div>
