new porject added

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 </div>
             </article>
             <article class="project">
-                <img src="./assets/images/Waiting.jpeg" alt="Placeholder image">
-                <div class="project-title">
+                <img src="./assets/images/Daily-Horoscope.png" alt="Daily Horoscope Landing Page">
+                <div class="Daily Horoscope Generator">
                     <h3>Coming Soon</h3>
                 </div>
             </article>
