--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
                 </div>
             </article>
             <article class="project">
+                <a href="https://cybertnl.github.io/mid-project/">
                 <img src="./assets/images/Daily-Horoscope.png" alt="Daily Horoscope Landing Page">
-                <div class="Daily Horoscope Generator">
-                    <h3>Coming Soon</h3>
+                </a>
+                <div class="project-title">
+                    <h3>Daily Horoscope</h3>
                 </div>
             </article>
             <article class="project">
