added in link to project

--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
                 </div>
             </article>
             <article class="project">
-                <img src="./assets/images/Waiting.jpeg" alt="Placeholder Image">
+                <a href="https://staykation-project2.herokuapp.com/">
+                <img src="./assets/images/Waiting.jpeg" alt="StayKations Landing Page">
+                </a>
                 <div class="project-title">
-                    <h3>Coming Soon</h3>
+                    <h3>StayKations</h3>
                 </div>
             </article>
             <article class="project">
