--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </article>
             <article class="project">
                 <a href="https://staykation-project2.herokuapp.com/">
-                <img src="./assets/images/Waiting.jpeg" alt="StayKations Landing Page">
+                <img src="./assets/images/staykationlandingpage.png" alt="StayKations Landing Page">
                 </a>
                 <div class="project-title">
                     <h3>StayKations</h3>
